# Mathoi-MCMagent

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  start-backend.ps1  start-frontend.ps1  test_out.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  e2e.txt  e2e2.txt  e2e3.txt  mathoi.db-shm  mathoi.db-wal  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  coder.py  coordinator.py  modeler.py  prompts.py  writer.py
backend/app/api/: admin.py  router.py  schemas.py
backend/app/auth/: __init__.py  deps.py  router.py  security.py
backend/app/config/: md_template.toml  paper_template.md
backend/app/core/: config.py  crypto.py  events.py  logging.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/exporters/: __init__.py  docx_exporter.py
backend/app/llm/: __init__.py  client.py  schema.py
backend/app/sandbox/: __init__.py  e2b.py  jupyter.py  notebook.py
backend/app/sandbox/preamble/: __init__.py  cjk_detect.py  loader.py  mpl_setup.py
backend/app/services/: __init__.py  model_service.py  search_service.py  usage_service.py
backend/app/tasks/: __init__.py  manager.py
backend/app/tools/: __init__.py  base.py  builtin.py  scholar.py
backend/app/utils/: __init__.py  data_preview.py
backend/app/workflow/: orchestrator.py  rewrite.py
backend/tests/: conftest.py  test_crypto.py  test_llm_retry.py  test_modeler_parse.py  test_orchestrator_helpers.py  test_preamble.py
deploy/searxng/: README.md  docker-compose.yml  settings.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  USAGE.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  store.ts  styles.css
frontend/src/api/: index.ts
frontend/src/components/: AdminPanel.tsx  AuthPage.tsx  CreateTask.tsx  FilesPanel.tsx  HITLPanel.tsx  ModelConfig.tsx  TaskList.tsx  TraceTimeline.tsx
