[project]
name = "mathoi-agent-backend"
version = "0.1.0"
description = "MathoiAgent backend - Mathematical Modeling AI Workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "openai>=1.50.0",
    "litellm>=1.50.0",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "redis>=5.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
e2b = [
    "e2b-code-interpreter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
