[project]
name = "mathoi-agent-backend"
version = "0.1.0"
description = "MathoiAgent backend - Mathematical Modeling AI Workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "openai>=1.50.0",
    "litellm>=1.50.0",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "redis>=5.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "duckduckgo-search>=6.0.0",
    # ── 沙箱科学计算（Coder Agent 执行环境必需）──────────────────────────
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "sympy>=1.12",
    "statsmodels>=0.14.0",
    "networkx>=3.2",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    # ── 梯度提升（prompts 代码规范 & 预测类题目核心）─────────────────────
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    # ── 优化（线性规划 / 凸优化）────────────────────────────────────────
    "pulp>=2.8.0",
    "cvxpy>=1.5.0",
    # ── 元启发式 / 多目标优化（遗传算法 / NSGA-II）───────────────────────
    "deap>=1.4.1",
    "pymoo>=0.6.1",
    # ── 可视化增强 ───────────────────────────────────────────────────────
    "plotly>=5.22.0",
    "Pillow>=10.3.0",
    # ── 计算加速 / 工具 ──────────────────────────────────────────────────
    "numba>=0.59.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    # ── DB ──────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
e2b = [
    "e2b-code-interpreter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
